--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
+attrs==23.1.0
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.0
+h11==0.14.0
+idna==3.4
+outcome==1.2.0
+packaging==23.2
+pycparser==2.21
+pysocks==1.7.1
+requests==2.31.0
 selenium==4.14.0
-selenium_driver_updater==6.0.2
+selenium-driver-updater==6.0.2
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+trio==0.22.2     
+trio-websocket==0.11.1
+urllib3[socks]==2.0.6
+wget==3.2
+wsproto==1.2.0
